--- a/就业班.md
+++ b/就业班.md
@@ -6182,7 +6182,7 @@ if not file_name.endswith(".html"):
 @route("/center.html")
 ```
 
-##### MySQL功能
+##### Mysql 功能
 
 导入数据
 
@@ -6241,13 +6241,903 @@ def center():
     # ... 省略
 ```
 
-实现在 
+> 这的页面代码是前端写好的，包括跳转超链接地址等，前端页面中有部分示例数据，具有格式，后端使用这些格式替换数据
+>
+> 后端写接口，用返回的数据替换前端页面中的示例数据
+
+全部实现在 WSGI_route_mysql
+
+# 面向切面  通过装饰器加功能
+
+# 通过这个过程理解 Flask 
 
 
 
-面向切面  通过装饰器加功能
+#### mini-web框架 添加正则、log功能
 
-通过这个过程理解 Flask 
+##### 路由支持正则
+
+```python
+@route(r"/index.html")
+@route(r"/center.html")
+# 给路由添加正则表达式的原因：
+# 在实际开发时，url中往往会带有很多参数，例如/add/000007.html中000007就是参数，
+# 如果没有正则的话，那么就需要编写N次@route来进行添加 url对应的函数 到字典中，此时字典中的键值对有N个，浪费空间
+# 而采用了正则的话，那么只要编写1次@route就可以完成多个 url例如/add/00007.html /add/000036.html等对应同一个函数，此时字典中的键值对个数会少很多
+@route(r"/add/\d+\.html")
+def add_focus():
+    return "add  ok ...."
+# ...
+try:
+    # func = URL_FUNC_DICT[file_name]
+    # return func()
+    # return URL_FUNC_DICT[file_name]()
+    for url, func in URL_FUNC_DICT.items():
+        # {r"/index.html":index,
+        #  r"/center.html":center,
+        #  r"/add/\d+\.html":add_focus}
+        ret = re.match(url, file_name)
+        if ret:
+            return func()
+    else:
+        return "请求的url(%s)没有对应的函数...." % file_name
+except Exception as ret:
+    return "产生了异常：%s" % str(ret)
+```
+
+##### 添加关注
+
+```python
+def index(ret):  # 多了一个参数，需要修改下
+def center(ret):  # 这两个里面 点击链接部分原来是写的固定值，也需改为动态的
+# ...
+@route(r"/add/(\d+)\.html")
+def add_focus(ret):
+    # 1. 获取股票代码
+    stock_code = ret.group(1)  # 通过匹配的结果 获取股票代码
+    # 2. 判断试下是否有这个股票代码  防止自己构造不存在代码访问 /add/88888.html
+    conn = connect(host='localhost',port=3306,user='root',
+                   password='mysql',database='stock_db',charset='utf8')
+    cs = conn.cursor()
+    sql = """select * from info where code=%s;"""
+    cs.execute(sql, (stock_code,))
+    # 如果要是没有这个股票代码，那么就认为是非法的请求
+    if not cs.fetchone():
+        cs.close()
+        conn.close()
+        return "没有这支股票，大哥 ，我们是创业公司，请手下留情..."
+    # 3. 判断以下是否已经关注过  防止重复关注
+    sql = """ select * from info as i inner join focus as f on i.id=f.info_id where i.code=%s;"""
+    cs.execute(sql, (stock_code,))
+    # 如果查出来了，那么表示已经关注过
+    if cs.fetchone():
+        cs.close()
+        conn.close()
+        return "已经关注过了，请勿重复关注..."
+    # 4. 添加关注
+    sql = """insert into focus (info_id) select id from info where code=%s;"""
+    cs.execute(sql, (stock_code,))
+    conn.commit()
+    cs.close()
+    conn.close()
+    return "关注成功...."
+# ...
+if ret:
+    return func(ret)  # 将匹配的结果作为实参传入  虽然 index center 不会用到
+```
+
+>注意：
+>
+>1. 页面的内容是前端写好的，如对应的超链接地址等，后端按格式返回数据就行
+>2. 框架写的比较全面的话，**添加功能**的话就是再多**增加一个函数**就行，如上面的add_focus函数，其余部分都是不需要再修改的
+
+##### 取消关注
+
+```python
+@route(r"/del/(\d+)\.html")
+def del_focus(ret):
+    # 1. 获取股票代码
+    stock_code = ret.group(1)
+    # 2. 判断试下是否有这个股票代码
+    conn = connect(host='localhost',port=3306,user='root',
+                   password='mysql',database='stock_db',charset='utf8')
+    cs = conn.cursor()
+    sql = """select * from info where code=%s;"""
+    cs.execute(sql, (stock_code,))
+    # 如果要是没有这个股票代码，那么就认为是非法的请求
+    if not cs.fetchone():
+        cs.close()
+        conn.close()
+        return "没有这支股票，大哥 ，我们是创业公司，请手下留情..."
+    # 3. 判断以下是否已经关注过
+    sql = """ select * from info as i inner join focus as f on i.id=f.info_id where i.code=%s;"""
+    cs.execute(sql, (stock_code,))
+    # 如果没有关注过，那么表示非法的请求  没有关注的话无需取消关注
+    if not cs.fetchone():
+        cs.close()
+        conn.close()
+        return "%s 之前未关注，请勿取消关注..." % stock_code
+    # 4. 取消关注
+    # sql = """insert into focus (info_id) select id from info where code=%s;"""
+    sql = """delete from focus where info_id = (select id from info where code=%s);"""
+    cs.execute(sql, (stock_code,))
+    conn.commit()
+    cs.close()
+    conn.close()
+    return "取消关注成功...."
+```
+
+##### 修改备注信息
+
+```python
+# 修改 在 新页面 中修改
+@route(r"/update/(\d+)\.html")
+def show_update_page(ret):
+    """显示修改的那个页面"""
+    # 1. 获取股票代码
+    stock_code = ret.group(1)
+    # 2. 打开模板
+    with open("./templates/update.html") as f:
+        content = f.read()
+    # 默认存在，可以修改  可以向上面一样，补全情况
+    # 3. 根据股票代码查询相关的备注信息  之前可以判断有无
+    conn = connect(host='localhost',port=3306,user='root',
+                   password='mysql',database='stock_db',charset='utf8')
+    cs = conn.cursor()
+    sql = """select f.note_info from focus as f inner join info as i on i.id=f.info_id where i.code=%s;"""
+    cs.execute(sql, (stock_code,))
+    stock_infos = cs.fetchone()
+    note_info = stock_infos[0]  # 获取这个股票对应的备注信息
+    cs.close()
+    conn.close()
+    content = re.sub(r"\{%note_info%\}", note_info, content)
+    content = re.sub(r"\{%code%\}", stock_code, content)
+    return content
+@route(r"/update/(\d+)/(.*)\.html")  # 这页面的地址 是前端中写好的
+def save_update_page(ret):  # 保存更新前应该判断 有无股票 内容有无sql注入  有无病毒 等
+    """"保存修改的信息"""
+    stock_code = ret.group(1)
+    comment = ret.group(2)
+    conn = connect(host='localhost',port=3306,user='root',
+                   password='mysql',database='stock_db',charset='utf8')
+    cs = conn.cursor()
+    sql = """update focus set note_info=%s where info_id = (select id from info where code=%s);"""
+    cs.execute(sql, (comment, stock_code))
+    conn.commit()
+    cs.close()
+    conn.close()
+    return "修改成功..."
+```
+
+##### URL 编码
+
+浏览器会将中文、空格等自动编码，，因此框架在数据保存前需要解码
+
+程序中使用`GET`方式传输备注信息    备注信息中多个空格时，浏览器只会显示一个空格，数据库中还是多个
+
+```python
+# python3对url编解码
+import urllib.parse
+# Python3 url编码
+print(urllib.parse.quote("天安门"))
+# Python3 url解码
+print(urllib.parse.unquote("%E5%A4%A9%E5%AE%89%E9%97%A8"))
+```
+
+```python
+comment = ret.group(2)
+comment = urllib.parse.unquote(comment)
+```
+
+##### logging日志模块
+
+###### 日志级别
+
+日志一共分成5个等级，从低到高分别是：
+
+1. DEBUG：详细的信息,通常只出现在诊断问题上
+2. INFO：确认一切按预期运行
+3. WARNING：一个迹象表明,一些意想不到的事情发生了,或表明一些问题在不久的将来(例如。磁盘空间低”)。这个软件还能按预期工作。
+4. ERROR：更严重的问题,软件没能执行一些功能
+5. CRITICAL：一个严重的错误,这表明程序本身可能无法继续运行
+
+这5个等级，也分别对应5种打日志的方法： debug 、info 、warning 、error 、critical。默认的是WARNING，当在WARNING或之上时才被跟踪。
+
+###### 日志输出
+
+1）将日志输出到控制台
+
+```python
+import logging  
+logging.basicConfig(level=logging.WARNING,  
+                   format='%(asctime)s - %(filename)s[line:%(lineno)d] - %(levelname)s: %(message)s') 
+# 开始使用log功能
+logging.info('这是 loggging info message')  # 类似于print 但带有级别
+logging.debug('这是 loggging debug message')  
+logging.warning('这是 loggging a warning message')  
+logging.error('这是 an loggging error message')  
+logging.critical('这是 loggging critical message')
+# 只会打印后三行
+```
+
+>通过logging.basicConfig函数对日志的输出格式及方式做相关配置，上面代码设置日志的输出等级是WARNING级别，意思是WARNING级别以上的日志才会输出。另外还制定了日志输出的格式。
+>
+>注意，只要用过一次log功能再次设置格式时将失效，实际开发中格式肯定不会经常变化，所以刚开始时需要设定好格式
+
+2）将日志输出到文件
+
+```python
+# 将日志输出到文件，只需要在logging.basicConfig函数中设置好输出文件的文件名和写文件的模式。
+import logging  
+logging.basicConfig(level=logging.WARNING,  
+                   filename='./log.txt',  
+                   filemode='w',  
+                   format='%(asctime)s - %(filename)s[line:%(lineno)d] - %(levelname)s: %(message)s') 
+logging.info('这是 loggging info message')  
+logging.debug('这是 loggging debug message')  
+logging.warning('这是 loggging a warning message')  
+logging.error('这是 an loggging error message')  
+logging.critical('这是 loggging critical message')
+```
+
+3）既要把日志输出到控制台， 还要写入日志文件
+
+```python
+import logging  
+# 第一步，创建一个logger  
+logger = logging.getLogger()  
+logger.setLevel(logging.INFO)  # Log等级总开关  
+# 第二步，创建一个handler，用于写入日志文件  
+logfile = './log.txt'  
+fh = logging.FileHandler(logfile, mode='a')  # open的打开模式这里可以进行参考
+fh.setLevel(logging.DEBUG)  # 输出到file的log等级的开关  
+# 第三步，再创建一个handler，用于输出到控制台  
+ch = logging.StreamHandler()  
+ch.setLevel(logging.WARNING)   # 输出到console的log等级的开关  
+# 第四步，定义handler的输出格式  
+formatter = logging.Formatter("%(asctime)s - %(filename)s[line:%(lineno)d] - %(levelname)s: %(message)s")  
+fh.setFormatter(formatter)  
+ch.setFormatter(formatter)  
+# 第五步，将logger添加到handler里面  
+logger.addHandler(fh)  
+logger.addHandler(ch)  
+# 日志  
+logger.debug('这是 logger debug message')  
+logger.info('这是 logger info message')  
+logger.warning('这是 logger warning message')  
+logger.error('这是 logger error message')  
+logger.critical('这是 logger critical message')
+```
+
+###### 日志格式说明
+
+logging.basicConfig函数中，可以指定日志的输出格式format，这个参数可以输出很多有用的信息，如下:
+
+- `%(levelno)s`: 打印日志级别的数值
+- `%(levelname)s`: 打印日志级别名称
+- `%(pathname)s`: 打印当前执行程序的路径，其实就是sys.argv[0]
+- `%(filename)s`: 打印当前执行程序名
+- `%(funcName)s`: 打印日志的当前函数
+- `%(lineno)d`: 打印日志的当前行号
+- `%(asctime)s`: 打印日志的时间
+- `%(thread)d`: 打印线程ID
+- `%(threadName)s`: 打印线程名称
+- `%(process)d`: 打印进程ID
+- `%(message)s`: 打印日志信息
+
+在工作中给的常用格式如下:
+
+```python
+format='%(asctime)s - %(filename)s[line:%(lineno)d] - %(levelname)s: %(message)s'
+```
+
+这个格式可以输出日志的打印时间，是哪个模块输出的，输出的日志级别是什么，以及输入的日志内容。
+
+全部实现在 WSGI_re_log
+
+# 装饰器什么时候装饰
+
+装饰器的一个关键特性是，它们在被装饰的函数定义之后立即运行。这 通常是在导入时（即 Python 加载模块时）
+
+https://www.cnblogs.com/xiangxiaolin/p/11655741.html
+
+
+
+通过协议解耦   功能分开  http WSGI 等
+
+#### 元类
+
+元类    一种特殊的类 用于创建类
+
+**给类加功能可以用元类**，类似于装饰器给函数加功能
+
+# 内建模块/内嵌模块  globals()、内嵌函数  `__builtin__模块默认加载，`
+
+调用的时候先在 globals() 中找，没有去 `__builtin__` 中找
+
+globals() 返回值为字典 有什么 可以用什么    全局变量
+
+
+
+##### 类也是对象
+
+类就是一组用来描述如何生成一个对象的代码段。在Python中，**类也是一种对象**。
+
+使用关键字class，Python解释器在执行的时候就会创建一个对象。
+
+` class ObjectCreator(object):pass` 将在内存中创建一个对象，名字就是ObjectCreator。这个对象（类对象ObjectCreator）拥有创建对象（实例对象）的能力。但是，它的本质仍然是一个对象，于是乎你可以对它做如下的操作：
+
+1. 你可以将它赋值给一个变量
+2. 你可以拷贝它
+3. 你可以为它增加属性
+4. 你可以将它作为函数参数进行传递
+
+```python
+class ObjectCreator(object):
+    pass
+print(ObjectCreator)  # 可以打印一个类，因为它其实也是一个对象
+# <class '__main__.ObjectCreator'>
+def echo(o):
+    print(o)
+echo(ObjectCreator)  # 可以将类做为参数传给函数
+# <class '__main__.ObjectCreator'>
+print(hasattr(ObjectCreator, 'new_attribute'))  # hasattr() 函数用于判断对象是否包含对应的属性。
+# Fasle
+ObjectCreator.new_attribute = 'foo'  # 可以为类增加属性
+print(hasattr(ObjectCreator, 'new_attribute'))
+# True
+print(ObjectCreator.new_attribute)
+# foo
+ObjectCreatorMirror = ObjectCreator  # 可以将类赋值给一个变量
+print(ObjectCreatorMirror())
+# <__main__.ObjectCreator object at 0x8997b4c>
+
+print(type(ObjectCreator()))  # 实例对象的类型
+# <class '__main__.ObjectCreator'>
+print(type(ObjectCreator))  # 类的类型
+# <type 'type'>
+```
+
+##### 动态地创建类
+
+可通过函数中的if判断，根据传入的不同，创建不同的类，实现动态创建，可以实现但不是好办法。
+
+##### 使用type创建类
+
+type还有一种完全不同的功能，动态的创建类。type可以接受一个类的描述作为参数，然后返回一个类。
+
+type(类名, 由父类名称组成的元组(针对继承的情况，可以为空)，包含属性的字典(名称和值))
+
+```python
+class Test: #定义了一个Test类
+    pass
+Test2 = type("Test2", (), {}) # 定了一个Test2类  返回值是一个类对象  type是类
+print(Test())  # 创建了一个Test类的实例对象
+print(Test2())  # 创建了一个Test2类的实例对象
+print(help(Test)) # 用help查看Test类
+print(help(Test2)) # 用help查看Test2类
+```
+
+我们使用 Test2 作为类名，并且也可以把它当做一个变量来作为类的引用。类和变量是不同的，这里没有任何理由把事情弄的复杂。即type函数中第1个实参，也可以叫做其他的名字，这个名字表示类的名字
+
+- type的第2个参数，元组中是父类的名字，而不是字符串
+- 添加的属性是类属性，并不是实例属性
+
+` Foo = type('Foo', (), {'bar': True})` 可以翻译为 `class Foo(object):bar = True`
+
+`FooChild = type('FooChild', (Foo,), {})` 继承Foo类
+
+较为完整的使用type创建类的方式：
+
+```python
+class A(object):
+    num = 100
+
+def print_b(self):  # 用于添加实例方法
+    print(self.num)
+
+@staticmethod  # 用于添加静态方法
+def print_static():
+    print("----haha-----")
+
+@classmethod  # 用于添加类方法
+def print_class(cls):
+    print(cls.num)
+# bar 为类属性
+B = type("B", (A,), {"bar": True, "print_b": print_b, "print_static": print_static, "print_class": print_class})
+b = B()
+b.print_b()
+b.print_static()
+b.print_class()
+```
+
+##### 元类
+
+创建类就是为了创建类的实例对象，元类就是用来创建这些类（对象）的
+
+```python
+MyClass = MetaClass()  # 使用元类创建出一个对象，这个对象称为“类”
+my_object = MyClass()  # 使用“类”来创建出实例对象
+```
+
+type就是Python在背后用来创建所有类的元类。
+
+> str是用来创建字符串对象的类，而int是用来创建整数对象的类。type就是创建类对象的类。你可以通过检查`__class__`属性来看到这一点。Python中所有的东西，注意，我是指所有的东西——**都是对象**。这包括整数、字符串、函数以及类。它们全部都是对象，而且它们都是从一个类创建而来，这个类就是type。
+
+```python
+age = 35
+print(age.__class__, age.__class__.__class__)
+name = 'bob'
+print(name.__class__, name.__class__.__class__)
+def foo(): pass
+print(foo.__class__, foo.__class__.__class__)
+class Bar(object): pass
+print(Bar.__class__, Bar.__class__.__class__)
+```
+
+##### `__metaclass__`属性
+
+你可以在定义一个类的时候为其添加`__metaclass__`属性。
+
+```python
+class Foo(object):  # (object, metaclass=something)  python3
+    __metaclass__ = something…  # python2
+    ...省略...
+```
+
+如果你这么做了，Python就会用元类来创建类Foo。小心点，这里面有些技巧。你首先写下class Foo(object)，但是类Foo还没有在内存中创建。Python会在类的定义中寻找`__metaclass__`属性，如果找到了，Python就会用它来创建类Foo，如果没有找到，就会用内建的type来创建这个类。把下面这段话反复读几次。当你写如下代码时 :
+
+```python
+class Foo(Bar):
+    pass
+```
+
+Python做了如下的操作：
+
+1. Foo中有`__metaclass__`这个属性吗？如果是，Python会通过`__metaclass__`创建一个名字为Foo的类(对象)
+2. 如果Python没有找到`__metaclass__`，它会继续在Bar（父类）中寻找`__metaclass__`属性，并尝试做和前面同样的操作。
+3. 如果Python在任何父类中都找不到`__metaclass__`，它就会在模块层次中去寻找`__metaclass__`，并尝试做同样的操作。
+4. 如果还是找不到`__metaclass__`,Python就会用内置的type来创建这个类对象。(原来定义类的时候都是type)
+
+现在的问题就是，你可以在`__metaclass__`中放置些什么代码呢？答案就是：可以创建一个类的东西。那么什么可以用来创建一个类呢？type，或者任何使用到type或者子类化type的东东都可以。
+
+##### 自定义元类
+
+元类的主要目的就是为了当创建类时能够自动地改变类。
+
+假想一个很傻的例子，你决定在你的模块里所有的类的属性都应该是大写形式。有好几种方法可以办到，但其中一种就是通过在模块级别设定`metaclass`。采用这种方法，这个模块中的所有类都会通过这个元类来创建，我们只需要告诉元类把所有的属性都改成大写形式就万事大吉了。
+
+幸运的是，`metaclass`实际上可以被任意调用，它并不需要是一个正式的类。所以，我们这里就先以一个简单的函数作为例子开始。
+
+```python
+#-*- coding:utf-8 -*-
+def upper_attr(class_name, class_parents, class_attr):  # 这传入 type 的参数 
+    # 'Foo'  (object,)  {"bar":"bip"}
+    
+    #遍历属性字典，把不是__开头的属性名字变为大写  还可以默认继承 及修改私有属性的名字
+    new_attr = {}
+    for name,value in class_attr.items():
+        if not name.startswith("__"):  # 过滤 object 中的
+            new_attr[name.upper()] = value
+    #调用type来创建一个类
+    return type(class_name, class_parents, new_attr)
+
+class Foo(object, metaclass=upper_attr):  # python3
+    bar = 'bip'
+
+print(hasattr(Foo, 'bar'))
+print(hasattr(Foo, 'BAR'))
+
+f = Foo()  # Foo 指向了新的type创建的
+print(f.BAR)
+```
+
+再做一次，这一次用一个真正的class来当做元类。
+
+```python
+class UpperAttrMetaClass(type):  # 继承type 认为是元类
+    # __new__ 是在__init__之前被调用的特殊方法
+    # __new__是用来创建对象并返回之的方法
+    # 而__init__只是用来将传入的参数初始化给对象
+    # 你很少用到__new__，除非你希望能够控制对象的创建
+    # 这里，创建的对象是类，我们希望能够自定义它，所以我们这里改写__new__
+    # 如果你希望的话，你也可以在__init__中做些事情
+    # 还有一些高级的用法会涉及到改写__call__特殊方法，但是我们这里不用
+    def __new__(cls, class_name, class_parents, class_attr):
+        # 遍历属性字典，把不是__开头的属性名字变为大写
+        new_attr = {}
+        for name, value in class_attr.items():
+            if not name.startswith("__"):
+                new_attr[name.upper()] = value
+        # 方法1：通过'type'来做类对象的创建
+        return type(class_name, class_parents, new_attr)
+        # 方法2：复用type.__new__方法
+        # 这就是基本的OOP编程，没什么魔法
+        # return type.__new__(cls, class_name, class_parents, new_attr)
+# python3的用法
+class Foo(object, metaclass=UpperAttrMetaClass):
+    bar = 'bip'
+# python2的用法
+# class Foo(object):
+#     __metaclass__ = UpperAttrMetaClass
+#     bar = 'bip'
+print(hasattr(Foo, 'bar'))
+# 输出: False
+print(hasattr(Foo, 'BAR'))
+# 输出:True
+f = Foo()
+print(f.BAR)
+# 输出:'bip'
+```
+
+就元类本身而言，它们其实是很简单的：
+
+1. 拦截类的创建
+2. 修改类
+3. 返回修改之后的类
+
+#### 元类实现ORM
+
+ORM 是 python编程语言后端web框架 Django的核心思想，“Object Relational Mapping”，即对象-关系映射，简称ORM。
+
+一个句话理解就是：创建一个实例对象，用创建它的**类名**当做**数据表名**，用创建它的**类属性**对应数据表的**字段**，当对这个实例对象操作时，能够对应MySQL语句
+
+```python
+# 示例
+class User(父类省略):
+    uid = ('uid', "int unsigned")
+    name = ('username', "varchar(30)")
+    email = ('email', "varchar(30)")
+    password = ('password', "varchar(30)")
+    # ...省略...
+u = User(uid=12345, name='Michael', email='test@orm.org', password='my-pwd')
+u.save()
+# 对应如下sql语句
+# insert into User (username,email,password,uid) values ('Michael','test@orm.org','my-pwd',12345)
+```
+
+> 注意：
+>
+> 1. 所谓的ORM就是让开发者在操作数据库的时候，能够像操作对象时通过`xxxx.属性=yyyy`一样简单，这是开发ORM的初衷
+> 2. 只不过ORM的实现较为复杂，Django中已经实现了 很复杂的操作，本节知识 主要通过完成一个 insert相类似的ORM，理解其中的道理就就可以了
+
+##### 通过元类简单实现ORM中的insert功能
+
+这只是一种实现方式，简单，容易理解的
+
+```python
+class ModelMetaclass(type):
+    def __new__(cls, name, bases, attrs):
+        mappings = dict()
+        # 判断是否需要保存
+        for k, v in attrs.items():
+            # 判断是否是指定的StringField或者IntegerField的实例对象
+            if isinstance(v, tuple):
+                print('Found mapping: %s ==> %s' % (k, v))
+                mappings[k] = v
+        # 删除这些已经在字典中存储的属性
+        for k in mappings.keys():
+            attrs.pop(k)
+        # 将之前的uid/name/email/password以及对应的对象引用、类名字
+        attrs['__mappings__'] = mappings  # 保存属性和列的映射关系  使其不出现在类属性中
+        attrs['__table__'] = name  # 假设表名和类名一致
+        return type.__new__(cls, name, bases, attrs)
+    
+class User(metaclass=ModelMetaclass):
+    uid = ('uid', "int unsigned")  # 元组
+    name = ('username', "varchar(30)")
+    email = ('email', "varchar(30)")
+    password = ('password', "varchar(30)")
+    # 当指定元类之后，以上的类属性将不在类中，而是在__mappings__属性指定的字典中存储
+    # 以上User类中有 
+    # __mappings__ = {
+    #     "uid": ('uid', "int unsigned")
+    #     "name": ('username', "varchar(30)")
+    #     "email": ('email', "varchar(30)")
+    #     "password": ('password', "varchar(30)")
+    # }
+    # __table__ = "User"
+    def __init__(self, **kwargs):
+        for name, value in kwargs.items():
+            setattr(self, name, value)  # 这self.不可以 self.name存为name，不会取name的值 不是uid等了
+            # 而且 self.name 只会存最后的值
+            # self 指向一个对象 对象的属性有 uid=12345 ...
+    def save(self):  # 转换为 sql语句
+        fields = []  # ["uid", "username"...]
+        args = []  # [12345, ...]
+        for k, v in self.__mappings__.items():
+            fields.append(v[0])
+            args.append(getattr(self, k, None))
+        sql = 'insert into %s (%s) values (%s)' % (self.__table__, ','.join(fields), ','.join([str(i) for i in args]))  # 这的数据没有 双引号，需要加
+        print('SQL: %s' % sql)
+        
+u = User(uid=12345, name='Michael', email='test@orm.org', password='my-pwd')
+# print(u.__dict__)
+u.save()
+```
+
+##### 完善对数据类型的检测、抽取到基类中
+
+```python
+class ModelMetaclass(type):
+    def __new__(cls, name, bases, attrs):
+        mappings = dict()
+        # 判断是否需要保存
+        for k, v in attrs.items():
+            # 判断是否是指定的StringField或者IntegerField的实例对象
+            if isinstance(v, tuple):
+                print('Found mapping: %s ==> %s' % (k, v))
+                mappings[k] = v
+
+        # 删除这些已经在字典中存储的属性
+        for k in mappings.keys():
+            attrs.pop(k)
+
+        # 将之前的uid/name/email/password以及对应的对象引用、类名字
+        attrs['__mappings__'] = mappings  # 保存属性和列的映射关系
+        attrs['__table__'] = name  # 假设表名和类名一致
+        return type.__new__(cls, name, bases, attrs)
+
+class Model(object, metaclass=ModelMetaclass):  # 这样可以重用了
+    def __init__(self, **kwargs):
+        for name, value in kwargs.items():
+            setattr(self, name, value)  # 这self. 不可以    self.name 存为name了
+    def save(self):
+        fields = []
+        args = []
+        for k, v in self.__mappings__.items():
+            fields.append(v[0])
+            args.append(getattr(self, k, None))
+            
+        args_temp = list()
+        for temp in args:
+            # 判断入如果是数字类型
+            if isinstance(temp, int):
+                args_temp.append(str(temp))  # ["12345"]
+            elif isinstance(temp, str):
+                args_temp.append("""'%s'""" % temp)  # 这没有 """ """ 的话，sql语句中就没有引号了
+        sql = 'insert into %s (%s) values (%s)' % (self.__table__, ','.join(fields), ','.join(args_temp))  # join 会去掉最外面一层引号
+        print('SQL: %s' % sql)
+        
+class User(Model):
+    uid = ('uid', "int unsigned")  # Django中这里不是元组 而是实例对象
+    name = ('username', "varchar(30)")
+    email = ('email', "varchar(30)")
+    password = ('password', "varchar(30)")
+
+u = User(uid=12345, name='Michael', email='test@orm.org', password='my-pwd')
+# print(u.__dict__)
+u.save()
+```
+
+普通定义类时 就是在 class 处 用 type 创建类了
+
+metaclass 不指定用 type
+
+
+
+理解原理    很多版本
+
+这self. 不可以    self.name 存为name了
+
+让传的值称为实例对象的属性
+
+#### 快速复习
+
+Linux介绍、命令---------------->会用就行，多练
+	操作系统（科普章节）
+	操作系统的发展史（科普章节）
+	文件和目录
+	Ubuntu 图形界面入门
+	Linux 命令的基本使用
+	Linux 终端命令格式
+	Linux 常用命令(一)
+	Linux 常用命令(二)
+	ls cd pwd rm cat cp mv mkdir touch tree more top htop ps kill clear history ifconfig ping ssh scp tar 
+	chmod shutdown reboot find grep ln sudo man which who whoami >重定向输出 |管道
+
+Linux安装软件、python开发环境
+	软件安装与卸载
+	常用服务器ftp、ssh
+	编辑器vim
+	pycharm的集成vim
+	编辑器sublime、终端运行python
+
+网络-udp---------------->了解
+	网络通信概述
+	ip地址(重点)
+	Linux命令(ping、ifconfig等)
+	端口(重点)---------------->重点
+	socket简介
+	udp网络程序-发送、接收数据(重点)
+	python3编码转换
+	udp绑定端口问题(重点)
+	网络通信过程(简单版)
+	案例:udp聊天器
+
+网络-tcp
+	tcp简介
+	tcp网络程序-客户端(重点)
+	tcp网络程序-服务器(重点)
+	tcp注意点(重点)
+	案例:文件下载器
+	tcp的3次握手(重点)---------------->重点
+	tcp的4次挥手(重点)---------------->重点
+	tcp长连接和短连接---------------->重点
+	wireshark的使用---------------->要会用
+	tcp/ip简介
+
+多任务-线程---------------->重点：进程、线程、协程 的区别，互斥锁 解决线程资源竞争 缺点产生死锁，GIL   互斥锁与GIL:互在逻辑上保证一个可能很长的事情做完，G在调度角度只能保证同一时刻只有一个线程执行，不见得把事情做完了，谁执行，执行多少次有默认策略     计算密集型用进程  线程在默认解释器上是假的   协程利用线程堵塞/消耗时间的地方  协程是假的多任务   多进程+协程
+	多任务的介绍
+	多任务的概念
+	线程(重点)
+	线程-注意点
+	多线程-共享全局变量(重点)
+	多线程-共享全局变量-问题
+	同步
+	互斥锁(重点)
+	死锁
+	案例:多任务版udp聊天器
+
+多任务-进程
+	进程以及状态
+	进程的创建-multiprocessing
+	进程、线程对比
+	进程间通信-Queue
+	进程的创建-进程池Pool
+	案例：文件夹copy器（多进程版）
+
+多任务-协程
+	迭代器
+	生成器
+	协程-yield
+	协程-greenlet
+	协程-gevent
+	进程、线程、协程区别
+	案例:并发下载器
+
+正则表达式---------------->重点
+	正则表达式概述
+	re模块操作
+	匹配单个字符
+	匹配多个字符
+	匹配开头结尾
+	匹配分组
+	re模块的高级用法
+	贪婪和非贪婪
+	r的作用
+
+http协议、web服务器-并发服务器1---------------->重点：HTTP协议, 访问baidu.com的过程， 浏览器和服务器之间的交互  访问baidu.com的过程中域名解析是重点   3次握手  网关  mac变 ip不变  
+	http协议
+	Web静态服务器-1-显示固定的页面
+	Web静态服务器-2-显示需要的页面
+	Web静态服务器-3-多进程
+	Web静态服务器-4-多线程
+
+web服务器-并发服务器2
+	Web静态服务器-5-非堵塞模式
+	Web静态服务器-6-epoll
+	Web静态服务器-7-gevent版
+	知识扩展-C10K问题
+
+网络通信过程
+	网络通信过程
+	NAT
+
+python提高-1
+	GIL---------------->重点
+	深拷贝、浅拷贝---------------->重点
+	私有化
+	import导入模块
+	再议 封装、继承、多态---------------->重点
+	
+python提高-2
+	多继承以及MRO顺序---------------->重点
+	再议静态方法、类方法
+	property属性-讲解
+	property属性-应用
+	魔法属性
+	面向对象设计
+	with与“上下文管理器”---------------->重点
+
+MySQL-基本使用
+	数据库简介
+		数据存储
+		数据库
+		RDBMS
+		RDBMS和数据库的关系
+		SQL
+		MySQL
+	MySQL安装
+	数据完整性
+	Navicat图形界面工具操作
+		数据库操作
+		数据表操作
+		数据操作
+	命令行脚本(重点)---------------->重点
+		数据库操作
+		数据表操作
+		数据增删改查
+		数据备份&恢复
+	数据库的设计
+
+MySQL-查询---------------->重点
+	MySQL查询
+	条件
+	排序
+	聚合函数
+	分组
+	分页
+	连接查询
+	自关联
+	子查询
+	总结
+
+
+MySQL与Python交互
+	准备数据
+	SQL演练
+	数据库设计
+	Python操作MySQL步骤
+	增删改查
+	参数化
+
+MySQL高级---------------->重点
+	视图
+	事务 ACID
+		提交
+		回滚
+	索引
+	账户管理(了解)
+		授予权限
+		账户操作
+	MySQL主从
+
+WSGI、mini-web框架---------------->重点：WSGI 协议规定  服务器如何把数据给框架 解耦
+	服务器动态资源请求
+	应用程序示例
+	Web动态服务器-基本实现
+	mini-web框架-1-文件结构
+	mini-web框架-2-显示页面
+	mini-web框架-3-替换模板
+
+闭包、装饰器---------------->重点重点重点重点
+	闭包
+	装饰器
+
+mini-web框架 添加路由、MySQL功能
+	mini-web框架-4-路由
+	伪静态、静态和动态的区别
+	mini-web框架-5-实现伪静态url
+	准备股票数据
+	mini-web框架-6-从mysql中查询数据
+	mini-web框架-7-组装数据为html格式
+
+mini-web框架 添加log日志、路由支持正则
+	mini-web框架-8-路由支持正则
+	mini-web框架-9-mysql增
+	mini-web框架-10-mysql删
+	mini-web框架-11-mysql改
+	mini-web框架-12-url编码
+	logging日志模块
+
+元类、实现ORM---------------->当需要提高的时候，可以看看
+	元类
+	元类实现ORM
+
+
+
+
+
+https://zhuanlan.zhihu.com/p/24283040  Python进阶：聊聊IO密集型任务、计算密集型任务，以及多线程、多进程
+
+https://blog.csdn.net/fervor_heart/article/details/12708313 为什么 tcp/udp 的端口号可以重复
+
+https://blog.csdn.net/wm12345645/article/details/82381407 面试题：进程间通信的方式  socket只是进程中通信的一种方式 这其他方式深入C语言会涉及
+
+
+
+
 
 
 
@@ -6269,22 +7159,5 @@ file 部分 博客  看 wb  rb
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 - 所谓`进程`指的是：运行的程序以及运行时用到的资源这个整体称之为进程（在讲解多任务编程时进行详细讲解）
 - 所谓`进程间通信`指的是：运行的程序之间的数据共享
-```
-
-```
